--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Sanket Bhos</title>
+    <title>Shubhankar dere</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
   <body>
     <div class="top-container">
       <img class="top-cloud" src="cloud.png" alt="cloud-image">
-      <h1>I'm Sanket</h1>
+      <h1>I'm Shubhankar</h1>
       <h2>A <span class="web">Web</span> Developer</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
       <img src="mountain.png" alt="mountain-image">
@@ -21,7 +21,7 @@
         <div class="profile">
           <img class="myprofile" src="sanket.jpg" alt="profile-picture">
           <h2>Hello</h2>
-          <p>I am Web Developer. I'm student of Computer Science in PCCOE Pune.</p>
+          <p>I am Web Developer. I'm student of Computer Science in Dy Patil ambi.</p>
         </div>
         <br><br>
         <hr>
@@ -29,8 +29,9 @@
           <h2>My Skills</h2>
           <div class="skill-row">
             <img class="skill-1" src="Screenshot (1241).png" alt="skill-1">
-            <h3>Object-oriented programming</h3>
-            <p>I started to learn code at the age of 16.I wanted to make my own website.I have gained all the concepts of object oriented programming.</p>
+            <h3>C programming</h3>
+            <p>I started to learn code at the age of 16.I wanted to be devloper.
+I have gained all the concepts of C programming.</p>
           </div>
           <div class="skill-row">
             <img class="skill-2" src="Screenshot (1242).png" alt="skill-2">
