--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="middle-container">
         <div class="profile">
-          <img class="myprofile" src="sanket.jpg" alt="profile-picture">
+          <img class="myprofile" src="shubhankar.jpg" alt="profile-picture">
           <h2>Hello</h2>
           <p>I am Web Developer. I'm student of Computer Science in Dy Patil ambi.</p>
         </div>
