--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@ I have gained all the concepts of C programming.</p>
           <h3 class="work">If you want to work with me.</h3>
 
 
-          <a class="btn" href="mailto:sanketbhos111@gmail.com">CONTACT ME</a>
+          <a class="btn" href="mailto:dereshubhankar@gmail.com">CONTACT ME</a>
         </div>
       </div>
 
 
       <div class="bottom-container">
-        <a class="footer-link1" href="https://www.instagram.com/sanket_bhos_23/">Instagram</a>
-        <a class="footer-link2" href="https://www.linkedin.com/in/sanket-bhos-3117a0209/">LinkedIn</a>
-        <a class="footer-link3" href="https://twitter.com/Sanket_Bhos_">Twitter</a>
-        <p class="copyright">© Sanket Bhos.</p>
+        <a class="footer-link1" href="https://www.instagram.com/s.h.u.b.h.a.n.k.a.r_342/">Instagram</a>
+       
+        <a class="footer-link3" href="https://twitter.com/dere_shubhankar">Twitter</a>
+        <p class="copyright">© Shubhankar dere.</p>
       </div>
 
 
